--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="Logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DJ MICKEY</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   </head>
   <body>
     <div id="root"></div>
